<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <View
            android:id="@+id/view46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_screen_calc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/color_back_calc"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view46"
            app:layout_constraintVertical_bias="0.517">
            <!-- Comentario en bloque -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_7"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_8"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_9"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_multi"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button17"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_4"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_5"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button19"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_6"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_resta"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button21"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_1"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_2"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_3"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_suma"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button25"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_dot"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button26"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_0"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button27"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_boton_calc"
                    android:text="@string/boton_equal"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>